--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+cmake-build-debug
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -9,3 +10,9 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# idea
+.idea
+
+# DON'T ignore
+!.gitignore
